# RobotBar

./: README.md
15072014prototype/: blue_print.odp
15072014prototype/set_phrase_talker/: CMakeLists.txt  package.xml
15072014prototype/set_phrase_talker/examples/: simple.txt
15072014prototype/set_phrase_talker/launch/: simple.launch
15072014prototype/set_phrase_talker/script/: set_phrase_talker_listener.py
15072014prototype/set_phrase_talker/src/unreleased/: simple.cc  simple.h
15072014prototype/set_phrase_trigger/: CMakeLists.txt  package.xml
15072014prototype/set_phrase_trigger/src/: simple.cc  simple.h
15072014prototype/set_phrase_trigger/src/publisher/: simple_pub.cc  simple_pub.cc~  simple_pub.h  simple_pub.h~
15072014prototype/user_db_observer/: CMakeLists.txt  package.xml
15072014prototype/user_db_observer/script/: user_db.json  user_db.py  user_prompt.py
baxter_bartender/euslisp/: alert-service.l  baxter-bar-scene.l  baxter-util.l  camera-coords.l  joint_observe_service.l  oshibori-detector.l.stable  spacenav_tf_publisher.l
baxter_bartender/euslisp/model/: table-circle.l
baxter_bartender/img/: data.l
baxter_bartender/launch/: frames.gv  kinect_from_baxter.launch
baxter_bartender/script/: #kao.sh#  spacenav.sh
baxter_bartender/teleop/: HandCameraController.launch  hand-controll-gui.l  oshibori-reacher.l  table-reacher.l  turtlebot-posestamped.l
baxter_bartender/www/: www_baxter_gui.launch
cup_ui/: CMakeLists.txt  mainpage.dox  manifest.xml
cup_ui/msg/: CupUi.msg  CupUi.msg~
cup_ui/src/: cup_ui_node.cpp  cup_ui_node.cpp~
face_recog/opencv_face_recog_node/: CMakeLists.txt  README.rst  package.xml
face_recog/opencv_face_recog_node/euslisp/: look_face.l  look_face_org.l  talk_sample.l
face_recog/opencv_face_recog_node/launch/: edge_detect_test.launch  face_detect.launch  face_detect_test.launch  kao.launch
face_recog/opencv_face_recog_node/src/: compressed_image_subscriber.cpp  edge_detector_node.cpp  face_detector.cpp  face_detector_node.cpp
mei_talk_util/: README.rst  install.sh  text2wave-jp
mei_talk_util/.svn/: entries
mei_talk_util/.svn/text-base/: Voice.zip.svn-base  text2wave-jp.svn-base  voice_echo.l.svn-base
old_system_for_may_festival_in_UTokyo/baxter_bartender/: CMakeLists.txt  manifest.xml  package.xml
old_system_for_may_festival_in_UTokyo/baxter_bartender/euslisp/: baxter_moveit.l  joint_observer.l  oshibori-detector.l  table-top-reaching.l  table-touch-it.l
old_system_for_may_festival_in_UTokyo/baxter_bartender/euslisp/model/: table-audience.l
old_system_for_may_festival_in_UTokyo/baxter_bartender/img/: pose-play-panel-util.l
old_system_for_may_festival_in_UTokyo/baxter_bartender/launch/: baxter_interface.launch  baxter_odom_world.launch  baxter_teleop.launch  camera2head.sh  kao.launch
old_system_for_may_festival_in_UTokyo/baxter_bartender/moveit_config/: baxter.srdf
old_system_for_may_festival_in_UTokyo/baxter_bartender/script/: gripper_controller_node.py
old_system_for_may_festival_in_UTokyo/baxter_bartender/teleop/: analog-rel-controller.l  angle-vector-logger.l  head-controller.l  posture-controller.l  predifined-postures.l  spacenav2posestamped.l  spline-interpole.l
old_system_for_may_festival_in_UTokyo/baxter_bartender/www/: body_controller.js  face_controller.js  hand_controller.js  simple_controller.html  simple_controller.sh
robot_bar_pkg/examples/: simple.txt
robot_bar_pkg/launch/: simple.launch
robot_bar_pkg/src/unreleased/: simple.cc  simple.h
sasabot/: CMakeLists.txt  package.xml
sasabot/examples/: app_test.cc  demo_maker.cc  free_sketch.cc
sasabot/launch/: demo_maker.launch  pcl_processing.launch
sasabot/scripts/: voice_wave.py
sasabot/src/common/: ssb_common_vec.h
sasabot/src/ui_tools/: ssb_uitools_canvas.h  ssb_uitools_keyframe.cc
sasabot/src/utils/: ssb_utils_model.cc  ssb_utils_model.h  ssb_utils_xml-inl.h  ssb_utils_xml.h
speech_recog/google_speech_recog_util/: CMakeLists.txt  README.rst  package.xml
speech_recog/google_speech_recog_util/www/: speech_recog.html  speech_recog.js  upload.sh
speech_recog/mecab_ros_util/: CMakeLists.txt  README.rst  install.sh  package.xml
speech_recog/mecab_ros_util/script/: mecab_node.py
ssb_proj_pkg/: package.xml
ssb_proj_pkg/examples/: app_test.h  demo_maker.h  free_sketch.h
ssb_proj_pkg/launch/: demo_maker.launch
ssb_proj_pkg/scripts/: file_handler.py  tmp.py  wav_handler.py
ssb_proj_pkg/src/actuators/: ssb_actuators_dynamixel.h
talker/simple_function_talker/: CMakeLists.txt  README.rst  package.xml
talker/simple_function_talker/euslisp/: function_talk_data.l  regix-util.l  talk_sample.l
twitter/twitter_ros_util/: CMakeLists.txt  install.sh  package.xml
voice_text/mei_talk_util/: CMakeLists.txt  README.rst  install.sh  package.xml  text2wave-jp  voice_echo.l
webai/webai_ros_util/: CMakeLists.txt  README.rst  package.xml
(+15 files in other folders)
