<?xml version="1.0"?>
<package>
  <name> baxter_bartender </name>
  <description> hoge </description>
  <version>0.0.0</version>
  <maintainer email="s-noda@jsk.t.u-tokyo.ac.jp">Noda Shintaro</maintainer>
  <license>Apache License 2.0</license>
  <export> </export>
  <buildtool_depend>catkin</buildtool_depend>
</package>
